# thebotx_cxx

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: CI.yml
include/ch/: ChannelFlags.hpp  Color.hpp  HistoryMessage.hpp  Message.hpp  Room.hpp  RoomManager.hpp  gen_uid.hpp  get_anon_id.hpp  get_server.hpp  parse_font.hpp  parse_name_color.hpp
include/tcx/: connect.hpp  no_utf8.hpp  parse_int.hpp  repr.hpp  resolve.hpp  split.hpp  ssl_handshake.hpp  unmangled_name.hpp  ws_handshake.hpp
src/: main.cpp
src/ch/: Room.cpp  RoomManager.cpp  gen_uid.cpp  get_anon_id.cpp  get_server.cpp  parse_font.cpp  parse_name_color.cpp
src/ch/Room/: connect.cpp  disconnect.cpp  io.cpp  rcmds.cpp
src/ch/Room/rcmds/: i.cpp  ok.cpp  pong.cpp  v.cpp
src/thebotx/: main.cpp
